@@ -88,37 +88,4 @@ class CategoriesControllerCategories extends JControllerAdmin
 			return true;
 		}
 	}
-
-	/**
-	 * Method to save the submitted ordering values for records via AJAX.
-	 *
-	 * @return  void
-	 *
-	 * @since   3.0
-	 */
-	public function saveOrderAjax()
-	{
-		JSession::checkToken() or jexit(JText::_('JINVALID_TOKEN'));
-
-		// Get the arrays from the Request
-		$pks   = $this->input->post->get('cid', null, 'array');
-		$order = $this->input->post->get('order', null, 'array');
-		$originalOrder = explode(',', $this->input->getString('original_order_values'));
-
-		// Make sure something has changed
-		if (!($order === $originalOrder))
-		{
-			// Get the model
-			$model = $this->getModel();
-			// Save the ordering
-			$return = $model->saveorder($pks, $order);
-			if ($return)
-			{
-				echo "1";
-			}
-		}
-		// Close the application
-		JFactory::getApplication()->close();
-
-	}
 }
